[JSC] Fix sign comparison warning/error after r144340. https://bugs.webkit.org/show_bug.cgi?id=111164

Reviewed by Mark Hahnenberg.

gcc (both 4.2.1 and 4.7.2) complain about comparing signed and
unsigned terms (clang accepts it just fine).

Work around that by casting the 1 to an uintptr_t as well.

* dfg/DFGEdge.h:
(JSC::DFG::Edge::makeWord):


Canonical link: https://commits.webkit.org/129521@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144452 268f45cc-cd09-0410-ab3c-d52691b4dbfc